# canvas2toml

./: .gitignore  LICENSE  README.md  pyproject.toml
src/canvas2toml/: __init__.py  cli.py
